--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -2,41 +2,41 @@ FROM php:7.4-apache
 
 # persistent dependencies
 RUN set -eux; \
-	apt-get update; \
-	apt-get install -y --no-install-recommends \
-	; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends \
+    ; \
     docker-php-ext-install pdo_mysql; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; \
-	rm -rf /var/lib/apt/lists/*; \
+    rm -rf /var/lib/apt/lists/*; \
     \
     # check PHP errors
-	err="$(php --version 3>&1 1>&2 2>&3)"; \
-	[ -z "$err" ]; \
+    err="$(php --version 3>&1 1>&2 2>&3)"; \
+    [ -z "$err" ]; \
     # Use the default production configuration
     mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # set recommended PHP.ini settings
 # see https://secure.php.net/manual/en/opcache.installation.php
 RUN set -eux; \
-	docker-php-ext-enable opcache; \
-	{ \
-		echo 'opcache.memory_consumption=128'; \
-		echo 'opcache.interned_strings_buffer=8'; \
-		echo 'opcache.max_accelerated_files=4000'; \
-		echo 'opcache.revalidate_freq=2'; \
-	} > /usr/local/etc/php/conf.d/mtt-opcache.ini
+    docker-php-ext-enable opcache; \
+    { \
+        echo 'opcache.memory_consumption=128'; \
+        echo 'opcache.interned_strings_buffer=8'; \
+        echo 'opcache.max_accelerated_files=4000'; \
+        echo 'opcache.revalidate_freq=2'; \
+    } > /usr/local/etc/php/conf.d/mtt-opcache.ini
 
 RUN { \
-		echo 'error_reporting = E_ALL & ~E_NOTICE & ~E_DEPRECATED & ~E_STRICT'; \
-		echo 'display_errors = Off'; \
-		echo 'display_startup_errors = Off'; \
-		echo 'log_errors = On'; \
-		echo 'error_log = /dev/stderr'; \
-		echo 'log_errors_max_len = 1024'; \
-		echo 'ignore_repeated_errors = On'; \
-		echo 'ignore_repeated_source = Off'; \
-		echo 'html_errors = Off'; \
-	} > /usr/local/etc/php/conf.d/mtt-errors.ini
+        echo 'error_reporting = E_ALL & ~E_NOTICE & ~E_DEPRECATED & ~E_STRICT'; \
+        echo 'display_errors = Off'; \
+        echo 'display_startup_errors = Off'; \
+        echo 'log_errors = On'; \
+        echo 'error_log = /dev/stderr'; \
+        echo 'log_errors_max_len = 1024'; \
+        echo 'ignore_repeated_errors = On'; \
+        echo 'ignore_repeated_source = Off'; \
+        echo 'html_errors = Off'; \
+    } > /usr/local/etc/php/conf.d/mtt-errors.ini
 
 COPY mytinytodo.tar.gz /usr/src/
 COPY --chown=www-data:www-data docker-config.php /usr/src/
@@ -44,8 +44,7 @@ COPY --chown=www-data:www-data docker-config.php /usr/src/
 COPY reinstall-mytinytodo.sh /usr/local/bin/
 COPY docker-entrypoint.sh    /usr/local/bin/
 
-#ENV MTT_DB_TYPE=${MTT_DB_TYPE:-sqlite}
-#VOLUME /var/www/html
+VOLUME /var/www/html
 
 ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["apache2-foreground"]
